--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
     <h1>Nächste Treffen</h1>
     <div fxLayout="column" fxLayoutAlign="space-between start" style="width: 80%;">
       <mat-card fxFill *ngFor="let event of events" ngStyle.lt-md="width: 85%;" (click)="showMeeting(event)">
-        <mat-card-title ngStyle.lt-sm="font-size: 120%;">{{event.dateString}}</mat-card-title>
+        <mat-card-title style="font-size: 140%;" ngStyle.lt-sm="font-size: 120%;">{{event.dateString}}</mat-card-title>
       </mat-card>
     </div>
   </div>
