Use first backend-endpoint in frontend

--- a/src/Client/src/app/planning-modal/planning-modal.component.scss
+++ b/src/Client/src/app/planning-modal/planning-modal.component.scss
@@ -1,3 +1,10 @@
 .mat-datetimepicker-calendar-header {
   display: none !important;
 }
+
+.mat-datetimepicker-clock {
+  padding-top: 75% !important;
+  width: 75% !important;
+  margin-left: auto;
+  margin-right: auto;
+}
