Add absences and missing event-endpoints

--- a/src/Client/src/app/app.component.html
+++ b/src/Client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div [class.dark-theme]="darkTheme" style="height: 100%;">
-  <mat-toolbar style="font-size: 150%;" color="primary" (click)="darkTheme = !darkTheme">
+  <mat-toolbar (click)="darkTheme = !darkTheme" color="primary" style="font-size: 150%;">
     <mat-icon>favorite</mat-icon>
     <span>Couple Planner</span>
   </mat-toolbar>
