--- a/src/Client/src/app/home/home.component.scss
+++ b/src/Client/src/app/home/home.component.scss
@@ -1,22 +1,28 @@
 :host::ng-deep mat-calendar .mat-calendar-body-cell-content {
   &.available {
     background-color: rgba(255, 236, 0, 0.33);
+
     &:hover {
       background-color: rgb(255, 236, 0) !important;
     }
+
     &.planned {
       background-color: rgba(25, 150, 50, 0.5);
+
       &:hover {
         background-color: rgb(25, 150, 50) !important;
       }
     }
   }
+
   &.not-available {
     background-color: rgba(255, 42, 86, 0.5);
+
     &:hover {
       background-color: rgb(255, 42, 86) !important;
     }
   }
+
   &:hover {
     background-color: rgb(196, 196, 196) !important;
   }
@@ -29,8 +35,9 @@
 .mat-card {
   border: solid #f44336;
   margin-bottom: 10px;
+
   &:hover {
-    background-color: rgba(255,0,0,0.25);
+    background-color: rgba(255, 0, 0, 0.25);
     cursor: pointer;
   }
 }
